@@ -13,3 +13,4 @@
    6-Oct-2019    V0.21 Include GO in the abbreviated set
    6-Oct-2019    V0.22 Make the content extracted subject to an API control to avoid Azure testing issues
   12-Oct-2019    V0.23 Add method SiftsSummaryProvider.getLongestAlignments()
+  16-Oct-2019    V0.24 Address variable record length in reading SIFTS GO data.
